Multicontainer Beanstalk support

--- a/{{cookiecutter.project_slug}}/.gitignore
+++ b/{{cookiecutter.project_slug}}/.gitignore
@@ -350,3 +350,5 @@ MailHog
 # See issue https://github.com/pydanny/cookiecutter-django/issues/1321
 !/compose/local/
 {% endif %}
+
+01_envvars.config
